Sat Feb 21 20:02:24 1998  Ian Lance Taylor  <ian@cygnus.com>

	* Makefile.in (clean): Change "/bin/rm" to "rm".

	* buffer.c (buf_append_buffer): Correct typo in comment.
	* rcs.c (RCS_putadmin): Likewise.

Fri Feb 20 17:53:06 1998  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (rcs_internal_unlockfile): Pass errno when calling error
 	because ferror is true.

1998-02-20  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (abspath): Don't assume that we can't write to /; this
	is the kind of thing that is sure to break sooner or later
	(especially on Windows).

	* sanity.sh: Add summary of which modules tests are which (at
	"modules").  Move cvsadm, abspath, and toplevel next to modules.
	Add comments to clarify the structure (such as it is).

Fri Feb 20 12:47:14 1998  Larry Jones  <larry.jones@sdrc.com>

	* admin.c (admin_fileproc): Better fix for -b.

	* rcs.c (RCS_whatbranch): Back out previous change.
	(RCS_getversion): Ditto.
	(RCS_setbranch): Treat an empty revision string like a null pointer.

1998-02-18  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_whatbranch): Fix indentation.

	* patch.c (patch_fileproc): Check for errors from fclose; check
	for errors from fopen properly.

Wed Feb 18 16:03:37 1998  Larry Jones  <larry.jones@sdrc.com>

	* admin.c (admin_fileproc): Convert -b argument from symbolic name
	to revision number before storing in the RCS file.
	* rcs.c (RCS_whatbranch): Allow numeric as well as symbolic revision.
	(RCS_getversion): Take advantage of above.
	* sanity.sh (admin): Add/revise/renumber admin-10c, admin-11a,
	admin-12, and admin-12a to check above.

	* commmit.c (lock_RCS): Minor clean-up.

	* sanity.sh (abspath-6a): Don't depend on the sepcific contents of
	CVSROOT, it depends on which other tests have been run.

Wed Feb 18 01:56:04 1998  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (putsymbol_proc): Use putc and fputs rather than fprintf.
	(RCS_putadmin): Don't call RCS_symbols if the symbols have not yet